created magic8ball for final

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
         <a href="https://www.kingjamesbibleonline.org/" target="_blank"><i class="fa-solid fa-book-bible"></i></a>
         <a href="https://www.youtube.com/watch?v=B6fA35Ved-Y&list=PLfeLRAbgkxUiHSRsq1E7wgj-DTbsWS9hW" target="_blank"><i class="fa-solid fa-dove"></i></a>
         <a href="https://kindredgrace.com/how-to-pray-for-other-people/" target="_blank"><i class="fa-solid fa-hands-praying"></i></a>
+        <a href="magic8ball.html"><i class="fa-solid fa-atom"></i></a>
+
         <a href="https://www.kingjamesbibleonline.org/Isaiah-Chapter-43/" target="_blank"><p>When you go through deep waters, I will be with you. When you go through rivers of difficulty, you will not drown. When you walk through the fire of oppression, you will not be burned up; the flames will not consume you. Isaiah 43:2 NLT</p></a>
     </footer>
     
