redoing magic8ball css

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
 
         <div class="button">
+            <input class="text-dark" type="text" name="text" placeholder="Ask Me Anything" /> <br/> <br/>
             <button id="questionButton">Ask Me </button>
         </div>
 
