--- a/magic8ball.html
+++ b/magic8ball.html
@@ -29,114 +29,129 @@
     <script src="https://kit.fontawesome.com/16ef79e6fd.js" crossorigin="anonymous" defer></script>
 </head>
 
+
 <body>
+
+
     <div class="page">
+        <br><br><br><br><br>
+        <div class="parallax">
+            <header>
+                <h1>MAGIC&nbsp;<span class="h2">8</span>&nbsp;BALL</h1>
+            </header>
 
-        <header>
-            <h1>MAGIC&nbsp;<span class="h2">8</span>&nbsp;BALL</h1>
-        </header>
+            <header>
+                <h1>ORIGINAL&nbsp;&nbsp;EDITION</h1>
+            </header>
 
-        <header>
-            <h1>ORIGINAL&nbsp;&nbsp;EDITION</h1>
-        </header>
+            <div class="ball">
+                <img id="8ball" src="/img/magic8ball_start.png" width="600px" height="600px">
+                <p id="answer" class="answer hide">Answer</p>
 
-        <div class="ball">
-            <img id="8ball"
-                src="/img/magic8ball_start.png" width="600px" height="600px">
-            <p id="answer" class="answer hide">Answer</p>
+                <div class="Circle">
 
-            <div class="Circle">
-
+                </div>
+                <a href="https://www.kingjamesbibleonline.org/Matthew-Chapter-19/" target="_blank">
+                    <h3> WITH GOD ALL THINGS ARE POSSIBLE-Matthew 19:26</h3>
+                </a>
             </div>
-           <a href="https://www.kingjamesbibleonline.org/Matthew-Chapter-19/" target="_blank"><h3> WITH GOD ALL THINGS ARE POSSIBLE-Matthew 19:26</h3></a>
+
+            <div class="button">
+                <input class="text-dark" type="text" name="text" placeholder="Ask me anything!" /> <br /> <br />
+                <button id="questionButton">Ask Me </button>
+            </div>
+
+            <audio controls>
+                <source src="assets/bensound-relaxing.mp3" type="audio/mpeg">
+            </audio>
+
+
+
+            <script type="text/javascript">
+                //Select the element on the page to interact with!
+
+                let button = document.querySelector("button");
+                let anwser = document.querySelector("#answer")
+
+                // Add a click event to the button
+                button.addEventListener("click", function () {
+
+                    //Create Array
+                    // Adding my Answers 
+                    const answers = [
+                        '<img class="wh" src="img/magic8ball_1.png" />',
+                        '<img class="wh" src="img/magic8ball_2.png" />',
+                        '<img class="wh" src="img/magic8ball_3.png" />',
+                        '<img class="wh" src="img/magic8ball_4.png" />',
+                        '<img class="wh" src="img/magic8ball_5.png" />',
+                        '<img class="wh" src="img/magic8ball_6.png" />',
+                        '<img class="wh" src="img/magic8ball_7.png" />',
+                        '<img class="wh" src="img/magic8ball_8.png" />',
+                        '<img class="wh" src="img/magic8ball_9.png" />',
+                        '<img class="wh" src="img/magic8ball_10.png" />',
+                        '<img class="wh" src="img/magic8ball_11.png" />',
+                        '<img class="wh" src="img/magic8ball_12.png" />',
+                        '<img class="wh" src="img/magic8ball_13.png" />',
+                        '<img class="wh" src="img/magic8ball_14.png" />',
+                        '<img class="wh" src="img/magic8ball_15.png" />',
+                        '<img class="wh" src="img/magic8ball_16.png" />',
+                        '<img class="wh" src="img/magic8ball_17.png" />',
+                        '<img class="wh" src="img/magic8ball_18.png" />',
+                        '<img class="wh" src="img/magic8ball_19.png" />',
+                        '<img class="wh" src="img/magic8ball_20.png" />'
+                    ];
+
+                    //Generate random number once 
+
+
+
+
+                    //Generate a random number 
+
+                    const random_Number = Math.random() * answers.length;
+
+
+
+                    //Turn Random number using the key above.
+                    const randomNumberFloor = Math.floor(random_Number)
+
+
+
+                    //alert(answers[randomNumberFloor]);
+                    anwser.innerHTML = answers[randomNumberFloor];
+
+                    //Display the answer 
+                    answer.classList.remove("hide");
+                    setTimeout(function () {
+                        answer.classList.add("hide")
+                    }, 4000)
+
+
+
+                });
+            </script>
+
         </div>
-
-        <div class="button">
-            <input class="text-dark" type="text" name="text" placeholder="Ask Me Anything" /> <br/> <br/>
-            <button id="questionButton">Ask Me </button>
+        <div class="parallax">
+            <footer class="text-info fs-2">&copy; 2022 | JS4B CP
+                <a href="https://www.worldvision.org/christian-faith-news-stories/keys-powerful-prayer-life-2022"
+                    target="_blank"><i class="fa-solid fa-person-praying"></i></a>
+                <a href="https://www.kingjamesbibleonline.org/" target="_blank"><i
+                        class="fa-solid fa-book-bible"></i></a>
+                <a href="https://www.youtube.com/watch?v=B6fA35Ved-Y&list=PLfeLRAbgkxUiHSRsq1E7wgj-DTbsWS9hW"
+                    target="_blank"><i class="fa-solid fa-dove"></i></a>
+                <a href="https://kindredgrace.com/how-to-pray-for-other-people/" target="_blank"><i
+                        class="fa-solid fa-hands-praying"></i></a>
+                <a href="index.html"><i class="fa-solid fa-atom"></i></a>
+                <a href="https://www.kingjamesbibleonline.org/Isaiah-Chapter-43/" target="_blank">
+                    <p>When you go through deep waters, I will be with you. When you go through rivers of difficulty,
+                        you
+                        will not drown. When you walk through the fire of oppression, you will not be burned up; the
+                        flames
+                        will not consume you. Isaiah 43:2 NLT</p>
+                </a>
+            </footer>
         </div>
-
-        <audio controls>
-            <source src="assets/inspire.mp3" type="audio/mpeg">
-        </audio>
-
-
-
-        <script type="text/javascript">
-            //Select the element on the page to interact with!
-
-            let button = document.querySelector("button");
-            let anwser = document.querySelector("#answer")
-
-            // Add a click event to the button
-            button.addEventListener("click", function () {
-
-                //Create Array
-                // Adding my Answers 
-                const answers = [
-                   '<img class="wh" src="img/magic8ball_1.png" />',
-                   '<img class="wh" src="img/magic8ball_2.png" />',
-                   '<img class="wh" src="img/magic8ball_3.png" />',
-                   '<img class="wh" src="img/magic8ball_4.png" />',
-                   '<img class="wh" src="img/magic8ball_5.png" />',
-                   '<img class="wh" src="img/magic8ball_6.png" />',
-                   '<img class="wh" src="img/magic8ball_7.png" />',
-                   '<img class="wh" src="img/magic8ball_8.png" />',
-                   '<img class="wh" src="img/magic8ball_9.png" />',
-                   '<img class="wh" src="img/magic8ball_10.png" />',
-                   '<img class="wh" src="img/magic8ball_11.png" />',
-                   '<img class="wh" src="img/magic8ball_12.png" />',
-                   '<img class="wh" src="img/magic8ball_13.png" />',
-                   '<img class="wh" src="img/magic8ball_14.png" />',
-                   '<img class="wh" src="img/magic8ball_15.png" />',
-                   '<img class="wh" src="img/magic8ball_16.png" />',
-                   '<img class="wh" src="img/magic8ball_17.png" />',
-                   '<img class="wh" src="img/magic8ball_18.png" />',
-                   '<img class="wh" src="img/magic8ball_19.png" />',
-                   '<img class="wh" src="img/magic8ball_20.png" />'
-                ];
-
-                //Generate random number once 
-
-
-
-
-                //Generate a random number 
-
-                const random_Number = Math.random() * answers.length;
-
-
-
-                //Turn Random number using the key above.
-                const randomNumberFloor = Math.floor(random_Number)
-
-
-
-                //alert(answers[randomNumberFloor]);
-                anwser.innerHTML = answers[randomNumberFloor];
-
-                //Display the answer 
-                answer.classList.remove("hide");
-                setTimeout(function () {
-                    answer.classList.add("hide")
-                }, 4000)
-
-
-
-            });
-        </script>
-
-    </div>
-
-    <footer class="text-info fs-2">&copy; 2022 | JS4B CP
-        <a href="https://www.worldvision.org/christian-faith-news-stories/keys-powerful-prayer-life-2022" target="_blank"><i class="fa-solid fa-person-praying"></i></a>
-        <a href="https://www.kingjamesbibleonline.org/" target="_blank"><i class="fa-solid fa-book-bible"></i></a>
-        <a href="https://www.youtube.com/watch?v=B6fA35Ved-Y&list=PLfeLRAbgkxUiHSRsq1E7wgj-DTbsWS9hW" target="_blank"><i class="fa-solid fa-dove"></i></a>
-        <a href="https://kindredgrace.com/how-to-pray-for-other-people/" target="_blank"><i class="fa-solid fa-hands-praying"></i></a>
-        <a href="index.html"><i class="fa-solid fa-atom"></i></a>
-        <a href="https://www.kingjamesbibleonline.org/Isaiah-Chapter-43/" target="_blank"><p>When you go through deep waters, I will be with you. When you go through rivers of difficulty, you will not drown. When you walk through the fire of oppression, you will not be burned up; the flames will not consume you. Isaiah 43:2 NLT</p></a>
-    </footer>
-    
 </body>
 
 </html>
