added required to ask me a question

--- a/magic8ball.html
+++ b/magic8ball.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="button">
-                <input class="text-dark" type="text" name="text" placeholder="Ask me anything!" /> <br /> <br />
+                <input class="text-dark" type="text" name="text" placeholder="Ask me anything!" required /> <br /> <br />
                 <button id="questionButton">Ask Me </button>
             </div>
 
