--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
             <div class="Circle">
 
             </div>
-           <a href="https://www.kingjamesbibleonline.org/Matthew-Chapter-19/" target="_blank"><h3> WITH GOD ALL THINGS ARE POSSIBLE-Matthew 19:26</h3></a>
+            <a href="https://www.kingjamesbibleonline.org/Matthew-Chapter-19/" target="_blank">
+                <h3> WITH GOD ALL THINGS ARE POSSIBLE-Matthew 19:26</h3>
+            </a>
         </div>
 
         <div class="button">
-            <input class="text-dark" type="text" name="text" placeholder="Ask me anything!" required/> <br/> <br/>
+            <input class="text-dark" type="text" name="text" placeholder="Ask me anything!" required /> <br /> <br />
             <button id="questionButton">Ask Me </button>
         </div>
 
@@ -60,16 +62,14 @@
             <source src="assets/inspire.mp3" type="audio/mpeg">
         </audio>
 
-
-
         <script type="text/javascript">
             //Select the element on the page to interact with!
 
-            let button = document.querySelector("button");
-            let anwser = document.querySelector("#answer")
+            let button = document.querySelector( "button" );
+            let anwser = document.querySelector( "#answer" )
 
             // Add a click event to the button
-            button.addEventListener("click", function () {
+            button.addEventListener( "click", function () {
 
                 //Create Array
                 // Adding my Answers 
@@ -132,47 +132,42 @@
                 ];
 
                 //Generate random number once 
-
-
-
-
                 //Generate a random number 
-
                 const random_Number = Math.random() * answers.length;
 
-
-
                 //Turn Random number using the key above.
-                const randomNumberFloor = Math.floor(random_Number)
-
-
+                const randomNumberFloor = Math.floor( random_Number )
 
                 //alert(answers[randomNumberFloor]);
-                anwser.innerHTML = answers[randomNumberFloor];
+                anwser.innerHTML = answers[ randomNumberFloor ];
 
                 //Display the answer 
-                answer.classList.remove("hide");
-                setTimeout(function () {
-                    answer.classList.add("hide")
-                }, 4000)
-
-
-
-            });
+                answer.classList.remove( "hide" );
+                setTimeout( function () {
+                    answer.classList.add( "hide" )
+                }, 4000 )
+            } );
         </script>
 
     </div>
 
     <footer class="text-info fs-2">&copy; 2022 | JS4B CP
-        <a href="https://www.worldvision.org/christian-faith-news-stories/keys-powerful-prayer-life-2022" target="_blank"><i class="fa-solid fa-person-praying"></i></a>
+        <a href="https://www.worldvision.org/christian-faith-news-stories/keys-powerful-prayer-life-2022"
+            target="_blank"><i class="fa-solid fa-person-praying"></i></a>
         <a href="https://www.kingjamesbibleonline.org/" target="_blank"><i class="fa-solid fa-book-bible"></i></a>
-        <a href="https://www.youtube.com/watch?v=B6fA35Ved-Y&list=PLfeLRAbgkxUiHSRsq1E7wgj-DTbsWS9hW" target="_blank"><i class="fa-solid fa-dove"></i></a>
-        <a href="https://kindredgrace.com/how-to-pray-for-other-people/" target="_blank"><i class="fa-solid fa-hands-praying"></i></a>
+        <a href="https://www.youtube.com/watch?v=B6fA35Ved-Y&list=PLfeLRAbgkxUiHSRsq1E7wgj-DTbsWS9hW" target="_blank"><i
+                class="fa-solid fa-dove"></i></a>
+        <a href="https://kindredgrace.com/how-to-pray-for-other-people/" target="_blank"><i
+                class="fa-solid fa-hands-praying"></i></a>
         <a href="magic8ball.html"><i class="fa-solid fa-atom"></i></a>
 
-        <a href="https://www.kingjamesbibleonline.org/Isaiah-Chapter-43/" target="_blank"><p>When you go through deep waters, I will be with you. When you go through rivers of difficulty, you will not drown. When you walk through the fire of oppression, you will not be burned up; the flames will not consume you. Isaiah 43:2 NLT</p></a>
+        <a href="https://www.kingjamesbibleonline.org/Isaiah-Chapter-43/" target="_blank">
+            <p>When you go through deep waters, I will be with you. When you go through rivers of difficulty, you will
+                not drown. When you walk through the fire of oppression, you will not be burned up; the flames will not
+                consume you. Isaiah 43:2 NLT</p>
+        </a>
     </footer>
-    
+
 </body>
 
 </html>
